--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "type": "module",
   "description": "[![Actions Status](https://github.com/OlgaKruzh/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/OlgaKruzh/frontend-project-lvl2/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
