--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "[![Actions Status](https://github.com/OlgaKruzh/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/OlgaKruzh/frontend-project-lvl2/actions)",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4"
+    "eslint-plugin-import": "^2.23.4",
+    "jest": "^27.0.6"
   }
 }
