--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,4 +9,5 @@ parserOptions:
 rules: {
     'no-console': 'off',
     'import/extensions': 0,
+    no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
 }
