--- a/.github/workflows/my-tests.yml
+++ b/.github/workflows/my-tests.yml
@@ -1,20 +1,52 @@
+# Name of workflow
+name: My tests
 
-name: my-tests
-
+# Trigger the workflow on push or pull request
 on:
-  push
+  - push
+  - pull_request
+
 jobs:
-  test-job:
+  build:
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
-      steps:
+
+    strategy:
+      # Node versions list
+      matrix:
+        node-version: [14.x]
+
+    steps:
+        # Check-out repository under GitHub workspace
+        # https://github.com/actions/checkout
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        name: 'setup node'
+        # Step's name
+      - name: Use Node.js ${{ matrix.node-version }}
+        # Configures the node version used on GitHub-hosted runners
+        # https://github.com/actions/setup-node
+        uses: actions/setup-node@v1
+        # The Node.js version to configure
         with:
-        node-version: '14.x'
-
-      - name: 'install'
-        run: npm i
-
-      - name: 'test'
-        run: npm run test
+          node-version: ${{ matrix.node-version }}
+      - name: npm install
+        # Install project
+        run: |
+          make install
+        # Add environment variables
+        env:
+          CI: true
+      - name: Run linter
+        # Run Linter
+        run: |
+          make lint
+      - name: Test & publish code coverage
+        # Publish code coverage on Code Climate
+        # https://github.com/paambaati/codeclimate-action
+        uses: paambaati/codeclimate-action@v2.7.4
+        # Add Code Climate secret key
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
